[package]
name = "matrix_captcha"
version = "0.1.0"
edition = "2021"
authors = ["Egor Ternovoy <cofob@riseup.net>"]
readme = "README.md"

[dependencies]
matrix-sdk = { version = "0.5.0", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.15"
anyhow = "1"
url = "2.2.2"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

